fixed white space at bottom of small screen

--- a/experiences.css
+++ b/experiences.css
@@ -124,6 +124,7 @@ footer a {
     width: 100%;
     display: flex;
     flex-direction: row;
+    background-color: #F9F7F7;
 }
 
 /*mobile device screen 750 -1000px*/
@@ -194,5 +195,6 @@ footer a {
     #container {
         width: 100%;
         flex-direction: column;
+        height: 100vh;
     }
 }
