--- a/home.css
+++ b/home.css
@@ -135,6 +135,7 @@ footer a {
     width: 100%;
     display: flex;
     flex-direction: row;
+    background-color: #F9F7F7;
 }
 
 /*mobile device screen 750 -1000px*/
@@ -208,5 +209,6 @@ footer a {
     #container {
         width: 100%;
         flex-direction: column;
+        height: 100vh;
     }
 }
