--- a/technical.css
+++ b/technical.css
@@ -131,6 +131,7 @@ footer a {
     width: 100%;
     display: flex;
     flex-direction: row;
+    background-color: #F9F7F7;
 }
 
 /*mobile device screen 750 -1000px*/
@@ -204,5 +205,6 @@ footer a {
     #container {
         width: 100%;
         flex-direction: column;
+        height: 100vh;
     }
 }
